// Vitest Snapshot v1

exports[`Input > Input alignVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        左对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        居中
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--center t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        右对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input bannerVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--size-small t-input--border input-demo"
  data-v-378bb8e9=""
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字(选填)"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input borderedVue demo works fine 1`] = `
<div
  class="input-demo"
  data-v-0b3942c8=""
>
  <div
    class="input-demo__summary"
    data-v-0b3942c8=""
  >
    标签文字
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small custom-input"
    data-v-0b3942c8=""
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-error-circle-filled"
            data-v-0b3942c8=""
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Input > Input customVue demo works fine 1`] = `
<div
  class="input-demo"
  data-v-16c31aae=""
>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
    data-v-16c31aae=""
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Input > Input labelVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签超长时最多十个字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input layoutVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-vertical t-input--size-small t-input--border"
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <div
        class="t-input__wrap--suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
            fill="currentColor"
          />
        </svg>
        
      </div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input maxLengthVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="10"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符
      </div>
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符，汉字算两个
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Input > Input mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Input 输入框
  </h1>
  <p
    class="summary"
  >
    用于单行文本信息输入。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字(选填)"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带字数限制输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="10"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符
          </div>
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符，汉字算两个
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带操作输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-info-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入手机号码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                   操作按钮 
                  
                </span>
                <!---->
              </button>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-user-avatar"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 2h20v20H2V2zm17.5 18h.5V4H4v16h.5a5 5 0 015-5h5a5 5 0 015 5zM12 7a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM7.5 9.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zm2 7.5a3 3 0 00-3 3h11a3 3 0 00-3-3h-5z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                fill="currentColor"
              />
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                fill="currentColor"
              />
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        特定类型输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            输入密码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              type="password"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-browse-off"
                fill="none"
                height="1em"
                viewBox="0 0 26 24"
                width="1em"
              >
                <path
                  d="M4 1.59l6.17 6.17 7.07 7.07L23.41 21 22 22.41l-2.97-2.96A12.5 12.5 0 011.08 12.3L1 12l.1-.3c.77-2.4 2.24-4.5 4.18-6.02L2.59 3 4 1.59zM6.7 7.1A10.53 10.53 0 003.1 12a10.5 10.5 0 0014.45 5.97l-1.8-1.8a5 5 0 01-6.93-6.93L6.7 7.11zm3.6 3.6a3 3 0 004 4l-4-4zM13 5c-.58 0-1.14.05-1.7.14l-.98.16L10 3.32l.99-.16A12.5 12.5 0 0124.9 11.7l.1.31-.1.3c-.41 1.3-1.03 2.5-1.82 3.58l-.59.8-1.61-1.18.59-.8c.6-.82 1.08-1.73 1.42-2.7A10.5 10.5 0 0013 5zm.51 1.93l.96.29a5 5 0 013.31 3.31l.3.96-1.92.58-.3-.95a3 3 0 00-1.98-1.99l-.95-.3.58-1.9z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            验证码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="输入验证码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-label="验证码"
                  aria-role="img"
                  class="t-image t-image--square image"
                  mode="heightFix"
                >
                  <div
                    class="t-image__mask"
                  >
                    <div
                      class="t-loading"
                      style="font-size: 20px;"
                    >
                      <div
                        class="t-loading__dots"
                        style="animation-duration: 800ms; width: 20px; height: 20px;"
                      >
                        
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0s;"
                        />
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                        />
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                        />
                        
                      </div>
                      <!--v-if-->
                      <!---->
                    </div>
                  </div>
                  <picture>
                    <!--v-if-->
                    <img
                      alt=""
                      class="t-image__img"
                      src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                      style="object-fit: fill; object-position: center;"
                    />
                  </picture>
                </div>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            手机号
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="输入手机号码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-role="button"
                  class="verify"
                >
                  发送验证码
                </div>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            价格
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="0.00"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              元
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            数量
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="填写个数"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              个
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        输入框状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--error"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--error"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            辅助说明
          </div>
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            不可编辑
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default t-input__control--disabled"
              disabled=""
              maxlength="-1"
              name=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        信息超长状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签超长时最多十个字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        内容位置
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            左对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            居中
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--center t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            右对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        竖排样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-vertical t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        非通栏样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border input-demo"
        data-v-378bb8e9=""
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        标签外置样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="input-demo"
        data-v-0b3942c8=""
      >
        <div
          class="input-demo__summary"
          data-v-0b3942c8=""
        >
          标签文字
        </div>
        <div
          class="t-input t-input--layout-horizontal t-input--size-small custom-input"
          data-v-0b3942c8=""
        >
          <div
            class="t-input__wrap--prefix"
          >
            <div
              class="t-input__icon--prefix"
            >
              <!--v-if-->
            </div>
            <div
              class="t-input__label"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                maxlength="-1"
                name=""
                placeholder="请输入文字"
                type="text"
              />
              <!--v-if-->
              <!--v-if-->
              <div
                class="t-input__wrap--suffix-icon"
              >
                
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  data-v-0b3942c8=""
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
                    fill="currentColor"
                  />
                </svg>
                
              </div>
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义样式输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="input-demo"
        data-v-16c31aae=""
      >
        <div
          class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
          data-v-16c31aae=""
        >
          <div
            class="t-input__wrap--prefix"
          >
            <div
              class="t-input__icon--prefix"
            >
              <!--v-if-->
            </div>
            <div
              class="t-input__label"
            >
              标签文字
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                maxlength="-1"
                name=""
                placeholder="请输入文字"
                type="text"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Input > Input prefixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
            fill="currentColor"
          />
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
            fill="currentColor"
          />
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input specialVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        输入密码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          type="password"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-browse-off"
            fill="none"
            height="1em"
            viewBox="0 0 26 24"
            width="1em"
          >
            <path
              d="M4 1.59l6.17 6.17 7.07 7.07L23.41 21 22 22.41l-2.97-2.96A12.5 12.5 0 011.08 12.3L1 12l.1-.3c.77-2.4 2.24-4.5 4.18-6.02L2.59 3 4 1.59zM6.7 7.1A10.53 10.53 0 003.1 12a10.5 10.5 0 0014.45 5.97l-1.8-1.8a5 5 0 01-6.93-6.93L6.7 7.11zm3.6 3.6a3 3 0 004 4l-4-4zM13 5c-.58 0-1.14.05-1.7.14l-.98.16L10 3.32l.99-.16A12.5 12.5 0 0124.9 11.7l.1.31-.1.3c-.41 1.3-1.03 2.5-1.82 3.58l-.59.8-1.61-1.18.59-.8c.6-.82 1.08-1.73 1.42-2.7A10.5 10.5 0 0013 5zm.51 1.93l.96.29a5 5 0 013.31 3.31l.3.96-1.92.58-.3-.95a3 3 0 00-1.98-1.99l-.95-.3.58-1.9z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        验证码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="输入验证码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-label="验证码"
              aria-role="img"
              class="t-image t-image--square image"
              mode="heightFix"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!--v-if-->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        手机号
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="输入手机号码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-role="button"
              class="verify"
            >
              发送验证码
            </div>
          </div>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        价格
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="0.00"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          元
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        数量
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="填写个数"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          个
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--error"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--error"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        辅助说明
      </div>
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        不可编辑
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default t-input__control--disabled"
          disabled=""
          maxlength="-1"
          name=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input suffixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入手机号码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
               操作按钮 
              
            </span>
            <!---->
          </button>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-user-avatar"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M2 2h20v20H2V2zm17.5 18h.5V4H4v16h.5a5 5 0 015-5h5a5 5 0 015 5zM12 7a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM7.5 9.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zm2 7.5a3 3 0 00-3 3h11a3 3 0 00-3-3h-5z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;
